<resources>
    <string name="app_name">FaceFitness</string>
    <string name="lessons_for_every_day">Уроки на каждый день!</string>
    <string name="for_beginner">Для наччинающих</string>
    <string name="title_activity_videos">VideosActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="start_learning">Начать обучение!</string>
    <string name="error_next_lesson">Для переключения на следующий урок необходимо до конца посмотреть данный урок</string>
    <string name="about_author">Об авторе</string>
    <string name="about_author_text">Привет, меня зовут Антонина, мне 32 года! Я тренер по миофасциальной гимнастике для лица.\n
Начну с того, что я получила свою первую профессию в горном деле. 12 лет я работала на
производстве, из них 6 лет инженером- геодезистом. Как и многие девочки стремилась похудеть,
но срывалась, набирала вес и снова худела, затем набирала еще больше. И я начала искать выход.
Разработав свою методику похудения, сбросила 15кг. Но тут возникла еще одна проблема. Лицо
после похудения стало «обвисать»! Мне помогла методика *Толкын Марат! За 20 дней я смогла
вернуть форму лица, убрать «мешки» под глазами, «брыли», уменьшить носогубную складку,
ушел второй подбородок, разгладилась межбровная складка! Теперь, занимаясь 30 мин в день, я
сохраняю свою молодость.\n
За весь период моей практики, как тренер по миосфасциальной гимнастике для лица, я
тренировала десятки девушек, женщин от 24 до 70 лет! Да, моей старшей ученице 70 лет. Все они
получили колоссальные результаты! Так появилось мое новое мобильное приложение, которое
сэкономит ваше время.\n
Я сделала 4 разбивки для более удобного использования. Вы можете сделать все в комплексе!
Либо разделить на утро, обед и вечер!\n
Также для самодисциплины, я придумала поощрение. Нужно собрать бейджи, чтобы открылся
следующий комплекс упражнений для лица. Помните! В первый раз, апоневроз головы,
необходимо проработать тщательно. В дальнейшем, это займет всего 3 -5 минут в день.
Про бейджи: за каждый день занятия вы получаете один бейдж! Если пропустите, хотя бы один
день, бейджи сгорают, и Вам придется собирать их сначала.\n
Первое, вы должны сделать массаж апоневроза! От этого зависит все остальное. На это Вам
дается 3 дня -3 бейджа. Затем откроется упражнение на верхнюю часть лица, в такой же
последовательности будет доступно упражнение на среднюю часть лица и упражнение на
нижнюю часть лица.\n
Моя история — преображения - это наглядная мотивация для тех, кто ценит свое здоровье и хочет
сохранить молодость без использования пластической хирургии и вредной косметики.
Моя цель: посвятить красоте и здоровью свою жизнь и делиться опытом с окружающими!!!</string>

    <string name="about_author_text_bottom">*<b>Толкын Марат</b> - <i>основатель первого в Казахстане центра лицевой гимнастики &quot;FaceFitness&quot;,
автор уникальной методики лицевой гимнастики, международный тренер и бьюти коуч. После
12 лет работы юристом в корпоративном секторе, включая &quot;КазМунайГаз&quot;, а также после
рождения третьего ребенка, Толкын активно занялась изучением темы естественного
омоложения лица и тела. С 2013 она прошла обучение в центрах лицевой гимнастики в России,
США, Украине, а с 2017 основала первый в Казахстане центр лицевой гимнастики, в котором по
авторской методике Толкын обучились уже более 1,500 женщин. На данном этапе Толкын
изучает область строения тела и нутрициологии, а также работает над курсом по
            гормональному питанию и готовит тренинг по правильной осанке и укреплению шеи.</i></string>
    <string name="instagram_title">Инстаграм</string>
    <string name="instagram_message">Это ссылка на мою страницу в Инстаграм. Заходи.</string>
    <string name="ok">Да</string>
    <string name="no">Нет</string>
    <string name="description_0"><b>1 Урок.</b>\n\n
        <b>1.1 Массаж апоневроза</b>\n
Старение лица начинается с изменений, которые происходят в надчерепной мышце, а точнее в
апоневротическом шлеме. Апоневротический шлем с возрастом имеет способность склеиваться с
черепом и мигрировать к центру лица и создает горизонтальные складки на лбу, также является
одной из причин носогубной складки и ухудшение овала лица. Проработка апоневротического
шлема является основой всей гимнастики.\n
Результат: Перестает беспокоить мигрень, глазное давление, появляется ощущение легкости.\n\n

<b>1.2 Массаж височной части</b>\n
Миграция апоневротического шлема приводит к движению височной мышцы. За счет этой
миграции происходит нависания верхнего века и образование межбровной складки. Проработка
височной мышцы усилит действие упражнений на верхнюю, среднюю и нижнюю части лица.\n\n
<b>1.3 Массаж ушей</b>\n
Массаж — ушей - это очень важный момент, так как с возрастом, уши меняют свое место посадки
и образуют множество морщин перед ушами и за ушами. Делаем массаж ушей до покраснения,
примерно, 1 минуту.\n\n</string>
    <string name="description_1">2 Урок (упражнения на верхнюю часть лица)
2.1 Расслабление лобной мышцы
Расслабление лобной мышцы. Результат: Расслабление и вытяжение мышц в естественную длину.
(См. мышца №1)
2.2 Укрепление лобной мышцы
Упражнение на лобную мышцу (см. мышца №1)
Результат: разглаживание горизонтальных складок и морщин лба.
2.3 Укрепление мышцы гордецов
Упражнение на мышцу «гордецов» (см. мышцу №3).
Результат: разглаживание вертикальных складок межбровья и поперечной складки переносицы.
2.4 Расслабление круговой мышцы глаза
Упражнение на круговые мышцы глаз (см. мышцу №2).
Результат: расслабление круговой мышцы глаз.

2.5 Укрепление на верхнее веко
Упражнение на верхнюю часть век круговой мышцы глаз.
Результат: подтяжка верхних век.
2.6 Укрепление нижнего века
Упражнение на нижнюю часть век круговой мышцы глаз.
Результат: укрепления нижнего века.</string>
    <string name="error_not_enough_lessons">Больше уроков нет</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
